# -------------------------- Configuration
test_data_conf = configuration_data()
test_data_conf.set_quoted('HIGHS_DIR',
                          meson.project_source_root())
configure_file(
  input: 'HCheckConfig.h.meson.in',
  output: 'HCheckConfig.h',
  configuration: test_data_conf,
)

test_array = [
  ['test_Avgas', 'Avgas.cpp'],
# The following two fail due to not finding cuda_runtime.h
#  ['test_cublas_example', 'cublas_example.cpp'],
#  ['test_cublas_gpu_start', 'cublas_gpu_start.cpp'],
  ['test_TestAlienBasis', 'TestAlienBasis.cpp'],
  ['test_TestBasis', 'TestBasis.cpp'],
  ['test_TestBasisSolves', 'TestBasisSolves.cpp'],
  ['test_TestCallbacks', 'TestCallbacks.cpp'],
  ['test_TestCheckSolution', 'TestCheckSolution.cpp'],
  ['test_TestCrossover', 'TestCrossover.cpp'],
  ['test_TestDualize', 'TestDualize.cpp'],
  ['test_TestEkk', 'TestEkk.cpp'],
  ['test_TestFactor', 'TestFactor.cpp'],
  ['test_TestFilereader', 'TestFilereader.cpp'],
  ['test_TestHighsCDouble', 'TestHighsCDouble.cpp'],
  ['test_TestHighsGFkSolve', 'TestHighsGFkSolve.cpp'],
  ['test_TestHighsHash', 'TestHighsHash.cpp'],
  ['test_TestHighsHessian', 'TestHighsHessian.cpp'],
  ['test_TestHighsIntegers', 'TestHighsIntegers.cpp'],
  ['test_TestHighsModel', 'TestHighsModel.cpp'],
  ['test_TestHighsParallel', 'TestHighsParallel.cpp'],
  ['test_TestHighsRbTree', 'TestHighsRbTree.cpp'],
  ['test_TestHighsSparseMatrix', 'TestHighsSparseMatrix.cpp'],
  ['test_TestHighsVersion', 'TestHighsVersion.cpp'],
  ['test_TestHipo', 'TestHipo.cpp'],
  ['test_TestHSet', 'TestHSet.cpp'],
  ['test_TestICrash', 'TestICrash.cpp'],
  ['test_TestIis', 'TestIis.cpp'],
  ['test_TestInfo', 'TestInfo.cpp'],
  ['test_TestIO', 'TestIO.cpp'],
  ['test_TestIpm', 'TestIpm.cpp'],
  ['test_TestIpx', 'TestIpx.cpp'],
  ['test_TestLogging', 'TestLogging.cpp'],
  ['test_TestLPFileFormat', 'TestLPFileFormat.cpp'],
  ['test_TestLpModification', 'TestLpModification.cpp'],
  ['test_TestLpOrientation', 'TestLpOrientation.cpp'],
  ['test_TestLpSolvers', 'TestLpSolvers.cpp'],
  ['test_TestLpValidation', 'TestLpValidation.cpp'],
  ['test_TestMain', 'TestMain.cpp'],
  ['test_TestMipSolver', 'TestMipSolver.cpp'],
  ['test_TestModelProperties', 'TestModelProperties.cpp'],
  ['test_TestMultiObjective', 'TestMultiObjective.cpp'],
  ['test_TestNames', 'TestNames.cpp'],
  ['test_TestOptions', 'TestOptions.cpp'],
  ['test_TestPdlp', 'TestPdlp.cpp'],
  ['test_TestPresolve', 'TestPresolve.cpp'],
  ['test_TestQpSolver', 'TestQpSolver.cpp'],
  ['test_TestRanging', 'TestRanging.cpp'],
  ['test_TestRays', 'TestRays.cpp'],
  ['test_TestSemiVariables', 'TestSemiVariables.cpp'],
  ['test_TestSetup', 'TestSetup.cpp'],
  ['test_TestSort', 'TestSort.cpp'],
  ['test_TestSpecialLps', 'TestSpecialLps.cpp'],
  ['test_TestThrow', 'TestThrow.cpp'],
  ['test_TestTspSolver', 'TestTspSolver.cpp'],
  ['test_TestUserScale', 'TestUserScale.cpp'],
]
foreach test : test_array
  test(test.get(0),
       executable(test.get(0),
          sources : ['TestMain.cpp',
                     'Avgas.cpp',
                     test.get(1),
                     highs_conf_file],
          dependencies : _deps,
          link_with : highslib,
          cpp_args : _args,
          include_directories: _incdirs,
                 ),
       timeout: 300,
      )
endforeach


test('test_capi',
     executable('capi_unit_tests',
                sources: ['TestCAPI.c', highs_conf_file],
                include_directories: _incdirs,
                link_with : highslib,
               )
    )
