[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"

[project]
name = "highspy-extras"
version = "1.13.1.dev8"
description = "HiGHS external dependencies extension for highspy"
authors = [{ name = "HiGHS developers", email = "highsopt@gmail.com" }]
readme = "README.md"

requires-python = ">=3.8"
# dependencies = ["highspy>=1.12.0"]

classifiers = [
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
"Source Code" = "https://github.com/ERGO-Code/HiGHS"
"Bug Tracker" = "https://github.com/ERGO-Code/HiGHS/issues"

[tool.scikit-build]
build.verbose = true
wheel.expand-macos-universal-tags = true
wheel.packages = ["highspy_extras"]
wheel.exclude = ["include", "lib*/", "bin", "LICENSE.txt", "README.md"]

# Files to include in the SDist even if they are skipped by default. Supports
# gitignore syntax.
sdist.include = [
  "highspy-extras/*",
  "LICENSE",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
  "extern",
  "cmake",
]

sdist.exclude = [
  ".github",
  ".gitattributes",
  ".gitignore",
  ".github",
  "app",
  "build",
  "check",
  "docs",
  "subprojects",
  ".coin-or",
  "build_webdemo.sh",
  ".clang-format",
  "__setup.py",
  "BUILD.bazel",
  "**meson**",
  "MODS.md",
  "WORKSPACE",
  "nuget/",
  "nuget/README.md",
  "highs/*.bazel*",
  "highs/*.meson*",
  "interfaces/*csharp*",
  "interfaces/*fortran*",
  "flake.*",
  "highs.pc.in",
]

[tool.scikit-build.cmake.define]
BUILD_OPENBLAS = "ON"

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
cmake.define.BUILD_OPENBLAS = "OFF"

[tool.cibuildwheel]
build = "*"
archs = ["auto64", "auto32"]
repair-wheel-command = ""

build-verbosity = 1